[gd_scene load_steps=9 format=3 uid="uid://ojj448xhq20k"]

[ext_resource type="Script" uid="uid://d2jr0umsp6yd3" path="res://_3D/board/road_hotspot/road_hotspot.gd" id="1_4fib4"]
[ext_resource type="Material" uid="uid://dnsu2x2mv1386" path="res://_3D/materials/road_holo.tres" id="2_4fib4"]
[ext_resource type="Material" uid="uid://dd6lp3tkgw0lc" path="res://_3D/materials/player_colors/yellow.tres" id="2_geh7g"]
[ext_resource type="Material" uid="uid://bhs52l6pfbpg7" path="res://_3D/materials/player_colors/green.tres" id="3_ph1bp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4fib4"]
size = Vector3(4.52399, 1.54401, 6.24169)

[sub_resource type="BoxMesh" id="BoxMesh_u45lf"]
size = Vector3(1, 1, 6)

[sub_resource type="TorusMesh" id="TorusMesh_geh7g"]
material = ExtResource("3_ph1bp")
inner_radius = 2.0
outer_radius = 2.5

[sub_resource type="SphereShape3D" id="SphereShape3D_ph1bp"]
radius = 8.0

[node name="RoadHotspot" type="Area3D" node_paths=PackedStringArray("road_model", "indicator_model", "neighbor_area")]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_4fib4")
road_model = NodePath("RoadModel")
indicator_model = NodePath("AvailableIndicator")
neighbor_area = NodePath("NeighborArea")
TEST_MAT = ExtResource("2_geh7g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0595388, 0.272003, -0.0777166)
visible = false
shape = SubResource("BoxShape3D_4fib4")

[node name="RoadModel" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_u45lf")
surface_material_override/0 = ExtResource("2_4fib4")

[node name="AvailableIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.374704, 0)
visible = false
mesh = SubResource("TorusMesh_geh7g")

[node name="NeighborArea" type="Area3D" parent="."]
visible = false
collision_layer = 0
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="NeighborArea"]
shape = SubResource("SphereShape3D_ph1bp")
debug_color = Color(1, 1, 0, 0.419608)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="NeighborArea" to="." method="_on_neighbor_area_entered"]
